# buildroid

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  deploy.sh  docker_cli.sh  install_dependencies.sh  install_deps.sh  tools.sh
host/: docker-compose.yml  tools.sh
shared/: CMakeLists.txt
src/: DatabaseController.cpp  GitManager.cpp  Main.cpp  MainDatabase.cpp  app_docker_cached_code  utils.cpp
src/fragments/: AppFragment.cpp  BaseFragment.cpp  BranchFragment.cpp  BuildTypeFragment.cpp  ConfirmFragment.cpp  LoginFragment.cpp  MainFragment.cpp  NoteFragment.cpp  TaxiFragment.cpp
src/include/: Callback.hpp  Data.hpp  DatabaseController.hpp  Fragments.hpp  GitManager.hpp  MainDatabase.hpp  gitty.hpp  utils.hpp
